<!--Right Second version 0.8
	Autor: Fernando Arenas Alapont-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="com.example.rightsecond.MainActivity" >

    <LinearLayout
        android:id="@+id/layContenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#708090"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#80000000"
            android:src="@drawable/icono_rs_512" />

        <LinearLayout
            android:id="@+id/lay1Main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#40000000"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/nombre"
                android:textColor="#FFCC00"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:maxLength="16"
                android:textSize="18sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/btnCarga"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:text="@string/jugar"
            android:textColor="#FFCC00"
            android:textSize="48sp" />

        <LinearLayout
            android:id="@+id/lay3Main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnInstrucciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/instrucciones" />

            <Button
                android:id="@+id/btnRanking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ranking" />

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/salir" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
